# fpse-project

./: README.md  dune
Proposal/: proposal.md
_coverage/: index.html
_coverage/src/: calculator.ml.html  collector.ml.html
src/: calculator.ml  calculator.mli  collector.ml  collector.mli  data_collection.ml  data_collection.mli  dune  monitor.ml  parser.mli
tests/: dune  tests.ml
